--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </div>
 <div class="cartTab">
-      <h1>Shopping Cart</h1>
+      <h1>Your custom pack</h1>
       <div class="listCart">
         
           
